# StoryTrack

./: .gitignore  README.md  app.Dockerfile  base.Dockerfile  process.Dockerfile  pyproject.toml  requirements.txt  spark.Dockerfile
.github/workflows/: ci.yml
assets/: style.css
src/storytrack/: app.py  dash_components.py  data_processing.py  delta_reader.py  gpx2delta.py  photo_process.py
